# MavenDependencyCheck

./: .gitignore  README.md  depcheck.py  pyproject.toml  repo.conf
.github/workflows/: codeql-analysis.yml
lib/: constants.py  helpers.py
